; ModuleID = '/home/carl/AnghaBench/h2o/deps/libyrmcds/extr_yc-cnt.c_recv_or_die.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/libyrmcds/extr_yc-cnt.c_recv_or_die.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@YRMCDS_OK = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"yc-cnt: failed to recv: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_4__*, i64)* @recv_or_die to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @recv_or_die(i32* %0, %struct.TYPE_4__* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i64 %2, i64* %6, align 8
  br label %8

8:                                                ; preds = %3, %30
  %9 = load i32*, i32** %4, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = call i64 @yrmcds_cnt_recv(i32* %9, %struct.TYPE_4__* %10)
  store i64 %11, i64* %7, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* @YRMCDS_OK, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %23

15:                                               ; preds = %8
  %16 = load i32, i32* @stderr, align 4
  %17 = load i64, i64* %7, align 8
  %18 = call i8* @yrmcds_strerror(i64 %17)
  %19 = call i32 @fprintf(i32 %16, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8* %18)
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @yrmcds_cnt_close(i32* %20)
  %22 = call i32 @exit(i32 1) #3
  unreachable

23:                                               ; preds = %8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* %6, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  br label %31

30:                                               ; preds = %23
  br label %8

31:                                               ; preds = %29
  ret void
}

declare dso_local i64 @yrmcds_cnt_recv(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @yrmcds_strerror(i64) #1

declare dso_local i32 @yrmcds_cnt_close(i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
